[package]
name = "sshproxy-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
security-framework = "2.11"
dirs = "5.0"
rpassword = "7.3"
whoami = "1.5"
totp-lite = "2.0"
data-encoding = "2.5"
