[package]
name = "sshproxy-rust"
version = "2.0.0"
edition = "2021"
documentation = "https://aryabhatt.github.io/sshproxy-rust/"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
rpassword = "7.3"
whoami = "1.5"
totp-lite = "2.0"
data-encoding = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.3", features = ["linux-native"] }


